tests/ui/inference/issue-113354.rs
//@run-rustfix
#![allow(unused_braces)]
fn main() {
    let _ = || { while Some(_) = Some(1) { } }; //~ ERROR mismatched types
}
